--- a/wallets_of_wallets/android/app/src/main/AndroidManifest.xml
+++ b/wallets_of_wallets/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="wallets_of_wallets"
+        android:label="firstly"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
