Updated member list as clickable

--- a/wallets_of_wallets/pubspec.yaml
+++ b/wallets_of_wallets/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   carousel_slider: ^4.2.1
   qr_flutter: ^4.1.0
+  sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
