--- a/wallets_of_wallets/pubspec.yaml
+++ b/wallets_of_wallets/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   sliding_up_panel: ^2.0.0+1
   firebase_core: ^2.30.1
   firebase_auth: ^4.19.4
+  cloud_firestore: ^4.17.2
 
 dev_dependencies:
   flutter_test:
