--- a/wallets_of_wallets/pubspec.yaml
+++ b/wallets_of_wallets/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.30.1
   firebase_auth: ^4.19.4
   cloud_firestore: ^4.17.2
+  flutter_credit_card: ^4.0.1
 
 dev_dependencies:
   flutter_test:
