--- a/wallets_of_wallets/pubspec.yaml
+++ b/wallets_of_wallets/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_auth: ^4.19.4
   cloud_firestore: ^4.17.2
   flutter_credit_card: ^4.0.1
+  image_picker: ^1.1.1
+  firebase_storage: ^11.7.5
 
 dev_dependencies:
   flutter_test:
