--- a/wallets_of_wallets/pubspec.yaml
+++ b/wallets_of_wallets/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_credit_card: ^4.0.1
   image_picker: ^1.1.1
   firebase_storage: ^11.7.5
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
